# ves-pi

./: .gitignore  README.md  setup.cfg
src/: accel.py  button.py  calibrator.py  cht.py  clutch.py  curses_dashboard.py  dashboard.py  gear.py  gps.py  lcd.py  led.py  mqttPubSub.py  mqtt_generator.py  neo_tach.py  neo_temp_sensor.py  pinout.py  potentiometer.py  segment_led.py  tach.py  temp_sensor.py  throttle.py
src/legacy/: all.py  get_gps.py  gps_sample.py  pot_reader.py  temp.py
