[metadata]
name = ves-pi
version = 0.0.1
license = <license name, e.g. MIT>
description = A telemetry capture and MQTT publisher/subscriber for vintage Vespa scooters
long_description = file: README.rst
author = Chandler Howell
author_email = chandler.howell@halfcat.org
classifiers=
   Framework :: Robot Framework

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <requirement 1>
   <requirement 2>
   <...>
   <requirement n>

[options.packages.find]
where=src
